fix(bulletins): keep image size ratio on small displays #327

--- a/src/scss/sections/_create-bulletin-form.scss
+++ b/src/scss/sections/_create-bulletin-form.scss
@@ -92,10 +92,12 @@ app-avalanche-problem-preview,
 }
 .avalanche-problem-preview__danger-rating {
   height: $space-8;
+  width: auto;
 }
 
 .avalanche-problem-preview__problem-icon {
   height: $space-8;
+  width: auto;
 }
 
 .avalanche-problem-preview__info-elevation {
